Fixes firefox overflow scrolling bug on home

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -531,3 +531,6 @@ pre tt:after {
     font-size: 100%;
   }
 }
+.noScroll {
+  overflow: hidden;
+}
